fix(r2): sonar smell cleanup backend top-20
Co-authored-by: Cursor <cursoragent@cursor.com>