@@ -19,19 +19,20 @@ import java.util.stream.Collectors;
 public class CargoService {
     private static final Logger logger = LoggerFactory.getLogger(CargoService.class);
     private static final String DOMAIN = "cadastros";
+    private static final String DOMAIN_PREFIX = DomainLogging.prefix(DOMAIN);
 
     private final CargoRepository cargoRepository;
 
     public List<CargoDTO> listarTodos() {
-        logger.info("{}Listando todos os cargos", DomainLogging.prefix(DOMAIN));
+        logger.info("{}Listando todos os cargos", DOMAIN_PREFIX);
         return cargoRepository.findAll().stream()
                 .filter(c -> c.isAtivo())
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CargoDTO buscarPorId(Long id) {
-        logger.info("{}Buscando cargo por ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Buscando cargo por ID: {}", DOMAIN_PREFIX, id);
         return cargoRepository.findById(id)
                 .filter(c -> c.isAtivo())
                 .map(this::toDTO)
@@ -40,14 +41,14 @@ public class CargoService {
 
     @Transactional
     public CargoDTO cadastrar(CargoDTO dto) {
-        logger.info("{}Cadastrando novo cargo: {}", DomainLogging.prefix(DOMAIN), dto.descricao());
+        logger.info("{}Cadastrando novo cargo: {}", DOMAIN_PREFIX, dto.descricao());
         Cargo cargo = toEntity(dto);
         return toDTO(cargoRepository.save(cargo));
     }
 
     @Transactional
     public CargoDTO atualizar(Long id, CargoDTO dto) {
-        logger.info("{}Atualizando cargo ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Atualizando cargo ID: {}", DOMAIN_PREFIX, id);
         Cargo cargo = cargoRepository.findById(id)
                 .filter(c -> c.isAtivo())
                 .orElseThrow(() -> new CargoNotFoundException(id));
@@ -58,7 +59,7 @@ public class CargoService {
 
     @Transactional
     public void remover(Long id) {
-        logger.info("{}Removendo cargo ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Removendo cargo ID: {}", DOMAIN_PREFIX, id);
         Cargo cargo = cargoRepository.findById(id)
                 .filter(c -> c.isAtivo())
                 .orElseThrow(() -> new CargoNotFoundException(id));
